--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,6 @@ html,body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
   font-family: Futura, Helvetica, sans-serif;
 }
 
@@ -14,6 +13,15 @@ a {
   color: $blue;
   text-decoration: none;
   border-bottom: 3px solid $blue;
+
+  &.digital {
+    color: $red;
+    border-color: $red;
+  }
+
+  &:active {
+    color: $red;
+  }
 }
 .digital {
   color: $red;
@@ -21,33 +29,109 @@ a {
 .physical {
   color: $blue;
 }
+.title {
+  display: inline-block;
+  border: $borderWidth / 2 solid $blk;
+  padding: $borderWidth $containerPadding;
+  vertical-align: text-bottom;
+}
 
 .container {
-    position: absolute;
-    top: 2 * $containerPadding + 22.4px;
-    left: 2 * $containerPadding + 22.4px;
-    right: 2 * $containerPadding + 22.4px;
-    bottom: 0;
-    box-sizing: border-box;
+  position: absolute;
+  top: 3 * $containerPadding + 22.4px;
+  left: 3 * $containerPadding + 22.4px;
+  right: 3 * $containerPadding + 22.4px;
+  bottom: 0;
+  box-sizing: border-box;
 
-    .when-box {
-      margin-top: 220px;
-      border-right: $borderWidth solid $blk;
-      height: 100%;
+  .inner-container {
+    border-right: $borderWidth solid $blk;
+    min-height: 100%;
+    margin-top: 300px;
 
-      &:before {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 200px;
-        border-top: $borderWidth solid $blk;
-        @include rotate(10deg, right bottom);
+    .apply-container {
+      clear: both;
+      border-top: $borderWidth solid $blk;
+      border-left: $borderWidth solid $blk;
+      min-height: 100%;
+      width: 100%;
+      padding-bottom: 100%;
+
+      h2 {
+        text-align: center;
+        margin: $containerPadding;
       }
     }
   }
 
+}
+
 .about {
   font-size: 1.8em;
-  max-width: 30em;
+  max-width: 42rem;
   margin: $containerPadding auto;
+}
+
+.more {
+  font-size: 1.3em;
+  max-width: 42rem;
+  margin: -100px auto $containerPadding;
+}
+
+.who {
+  clear: both;
+  font-size: 1.3em;
+  max-width: 42rem;
+  margin: $sectionMargin auto;
+}
+.fixed-inner-top {
+  display: none;
+  position: fixed;
+  z-index: 50;
+  top: 3 * $containerPadding + 22.4px;
+  left: 3 * $containerPadding + 22.4px;
+  right: 3 * $containerPadding + 22.4px + $borderWidth;
+  border-top: $borderWidth solid $blk;
+
+  &.visible {
+    display: block;
+  }
+}
+.slant-container {
+  position: relative;
+  z-index: 99;
+  top: -200px + $borderWidth;
+  height: 200px;
+  width: 100%;
+
+  .slant {
+    background: transparent;
+    fill: white;
+  }
+}
+.border {
+  fill: $blk;
+}
+
+.when-box {
+  float: right;
+  padding: 2em 4em 2em 2em;
+  border: $borderWidth solid $blk;
+  border-right: none;
+  border-bottom: none;
+  font-size: 1.8em;
+  margin: $sectionMargin 0;
+
+
+  .where-details {
+    color: $gray;
+
+    > span, > a {
+      margin: 0 8px;
+
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+  }
 }
