--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -7,6 +7,7 @@
   right: $containerPadding;
   bottom: $containerPadding;
   z-index: 100;
+  pointer-events: none;
 
   &:before {
     content: '';
@@ -41,6 +42,7 @@
 
   .nav {
     font-size: 1.4em;
+    pointer-events: initial;
 
     > div {
       position: absolute;
@@ -64,6 +66,18 @@
       bottom: $containerPadding;
       left: $containerPadding;
       @include rotate(-90deg, left top);
+    }
+
+    #nav__apply {
+      span {
+        display: block;
+        position: absolute;
+        opacity: 0.1;
+
+        &:last-of-type {
+          opacity: 1;
+        }
+      }
     }
   }
 }
