--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,3 +5,7 @@ $blk: black;
 $gray: #999;
 $red: #FF2120;
 $blue: #271DFF;
+
+$maxWidth: 32rem;
+
+$font: "futura-pt", Futura, Arial, Helvetica, sans-serif;
