filling in content

--- a/src/partials/opencall.html
+++ b/src/partials/opencall.html
@@ -1,5 +1,5 @@
 <div class="container__page opencall" id="open-call">
-  <h2>Open call</h2>
+  <h2><a href="#open-call" class="scroll no-slash">Open call</a></h2>
 
   <div class="container__page__contents">
     <p>If you have a potential project that utilizes livestreaming and / or digital inputs to blur the line between &lsquo;viewer&rsquo; and &lsquo;collaborator&rsquo;, we want to hear from you. From data visualization to interpretative dance, podcasts to prose, AI to the humanities, all artists and technologists with an interest in experimentation are welcome.</p>
@@ -26,32 +26,36 @@
     </div>
   </div>
 
-  <div class="opencall__applications">
-    <div class="opencall__applications__pair">
-      <div class="opencall__applications__box">
+  <div class="gallery-boxes">
+    <div class="gallery-boxes__pair">
+      <div class="gallery-boxes__box">
         <h3>INSIDE/<br />PROJECT</h3>
         <p>A multi-day new media project hosted in Atlanta. Artist(s) will work live on stream. Must collaborate with the public.</p>
-        <a class="opencall__applications__box__link digital apply" data-type="inside-project" href="#">apply</a>
+        <span class="gallery-boxes__box__award">Award / $750</span>
+        <a class="gallery-boxes__box__link digital apply" data-type="inside-project" href="#">apply</a>
       </div>
 
-      <div class="opencall__applications__box">
+      <div class="gallery-boxes__box">
         <h3>OUTSIDE/<br />PROJECT</h3>
         <p>A multi-day new media project hosted abroad. Artist(s) will broadcast from location and/or present project online through our platform.</p>
-        <a class="opencall__applications__box__link digital apply" data-type="outside-project" href="#">apply</a>
+        <span class="gallery-boxes__box__award">Award / $300</span>
+        <a class="gallery-boxes__box__link digital apply" data-type="outside-project" href="#">apply</a>
       </div>
     </div>
 
-    <div class="opencall__applications__pair">
+    <div class="gallery-boxes__pair">
 
-      <div class="opencall__applications__box">
+      <div class="gallery-boxes__box">
         <h3>INSIDE/<br />GALLERY</h3>
         <p>A previously completed or in-progress artwork with a digital component to show at our real world gallery.</p>
-        <a class="opencall__applications__box__link digital apply" data-type="inside-gallery" href="#">apply</a>
+        <span class="gallery-boxes__box__award">Award / $300</span>
+        <a class="gallery-boxes__box__link digital apply" data-type="inside-gallery" href="#">apply</a>
       </div>
-      <div class="opencall__applications__box">
+      <div class="gallery-boxes__box">
         <h3>OUTSIDE/<br />GALLERY</h3>
         <p>A previously completed or in-progress artwork, primarily digital, to show in our virtual gallery.</p>
-        <a class="opencall__applications__box__link digital apply" data-type="outside-gallery" href="#">apply</a>
+        <span class="gallery-boxes__box__award">Award / $150</span>
+        <a class="gallery-boxes__box__link digital apply" data-type="outside-gallery" href="#">apply</a>
       </div>
     </div>
   </div>
