--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,3 +1,25 @@
-<div class="container__page">
-  <h2>Introduction</h2>
+<div class="container__page team last" id="team">
+  <h2><a href="#team" class="scroll no-slash">Team</a></h2>
+
+  <div class="container__page__contents">
+    <h3 class="container__page__subheading">/ Pablo Gnecco</h3>
+    <p>
+      <a class="digital" target="_blank" href="http://studiostudio.nyc/">studiostudio.nyc</a> Experiential Artist and Motion Designer living and working in NYC, member of The New Museum’s Art and Tech Incubator, NEWINC. Founder of Studio Studio, an immersive installation company exploring the intersection of participation, performance, and new technology to create experiences and interactive works of art.
+    </p>
+
+    <h3 class="container__page__subheading">/ Travis Broyles</h3>
+    <p>
+      <a class="digital" target="_blank" href="https://verysandwich.com/">verysandwich.com</a> A copywriter and digital strategist for seven years, Broyles believes that the best communication, whether it’s for collaborators, communities, or consumers, starts with common sense ethics and a southern fried desire to truly help one another. Most recently he co-founded a digital strategy and content company, Very Sandwich Inc.
+    </p>
+
+    <h3 class="container__page__subheading">/ Derek Bruno</h3>
+    <p>
+      <a class="digital" target="_blank" href="http://christopherderekbruno.com/">derekbruno.com</a> After an education in industrial design, Bruno moved about the United States cultivating his approach to the design + fabrication of furniture and sculpture based imagery. Currently residing in Seattle, his recent work intends to explore the cognitive visual experience.
+    </p>
+
+    <h3 class="container__page__subheading">/ Eric Rabinowitz</h3>
+    <p>
+      <a class="digital" target="_blank" href="http://ericrabinowitz.com/">ericrabinowitz.com</a>
+    </p>
+  </div>
 </div>
