--- a/src/partials/tools.html
+++ b/src/partials/tools.html
@@ -1,6 +1,9 @@
 <div class="container__page tools" id="tools">
-  <h2>Tools</h2>
+  <h2><a href="#tools" class="scroll no-slash">Tools</a></h2>
 
   <div class="container__page__contents">
+    <p>
+      Tools blurb : This should be some pretty legit text that explains the general premise of what we are looking to accomplish with the tools we are providing, maybe there is a <a href="#">link</a> to a repository of some kind to see the back end of the tools that are developed i think this section will be critical going forwar.... lets do it right.
+    </p>
   </div>
 </div>
