--- a/src/partials/introduction.html
+++ b/src/partials/introduction.html
@@ -1,5 +1,5 @@
 <div class="container__page introduction" id="introduction">
-  <h2>Introduction</h2>
+  <h2><a href="#introduction" class="scroll no-slash">Introduction</a></h2>
 
   <div class="container__page__contents">
     <p><span class="n9to5">9to5</span> is equal parts: Artist Residency, Gallery, Classroom, & TV Network</p>
@@ -7,6 +7,40 @@
     <p>We&rsquo;ll stream artists creating their works, site specific multi media projects, social activism panels, new media workshops, panel shows, podcasts, visual shows, and more. All of these segments will be divided into channels and programming blocks throughout our month long exhibition.</p>
 
     <p>We&rsquo;ll host idle web based projects on our website gallery and display real life site specific projects installations in our INSIDE Gallery, all connected to the web ready for participation from the world.</p>
+  </div>
+
+  <div class="gallery-boxes">
+    <div class="gallery-boxes__pair">
+      <div class="gallery-boxes__box">
+        <h3>GALLERY</h3>
+        <p>/ Features and curates artworks
+        / Hosts discussions and lectures
+        / Invites the public to view the work</p>
+      </div>
+
+      <div class="gallery-boxes__box">
+        <h3>RESIDENCY</h3>
+        <p>/ Features and curates artworks</p>
+        <p>/ Hosts discussions and lectures</p>
+        <p>/ Invites the public to view the work</p>
+      </div>
+    </div>
+
+    <div class="gallery-boxes__pair">
+
+      <div class="gallery-boxes__box">
+        <h3>CLASS-<br />ROOM</h3>
+        <p>/ Features and curates artworks
+        / Hosts discussions and lectures
+        / Invites the public to view the work</p>
+      </div>
+      <div class="gallery-boxes__box">
+        <h3>TV<br />NETWORK</h3>
+        <p>/ Features and curates artworks
+        / Hosts discussions and lectures
+        / Invites the public to view the work</p>
+      </div>
+    </div>
   </div>
 
 </div>
