--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -1,3 +1,3 @@
-<div class="container__page">
-  <h2>Introduction</h2>
+<div class="container__page location" id="location">
+  <h2><a href="#location" class="scroll no-slash">Location</a></h2>
 </div>
