--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -1,7 +1,42 @@
 <div class="container__page partners" id="partners">
-  <h2>Partners</h2>
+  <h2><a href="#partners" class="scroll no-slash">Partners</a></h2>
 
   <div class="container__page__contents">
-    <p>The <span class="n9to5">9to5</span> Beta was one of five forward-thinking finalists for <a href="http://www.fieldexperimentatl.com/" target="_blank">Field Experiment</a>, an annual grant competition sponsored by <a href="http://www.hambidge.org/" target="_blank">The Hambidge Center for the Creative Arts</a> and <a href="https://www.facebook.com/TheGoatFarmArtsCenter/" target="_blank">The Goat Farm</a>. Our winning week featured five full nights of distinct programming, with each night using our collaborative livestream platform differently. Over the last year our team has been working to produce the second iteration of this concept. This copy should talk about the types of partnership and some evocative text that  highlights the fact that we are still looking for active partnerships in the form financial backers, technology support, development, and in kind donations of all kinds.</p>
+    <p>The <span class="n9to5">9to5</span> Beta was one of five forward-thinking finalists for <a class="digital" href="http://www.fieldexperimentatl.com/" target="_blank">Field Experiment</a>, an annual grant competition sponsored by <a class="digital" href="http://www.hambidge.org/" target="_blank">The Hambidge Center for the Creative Arts</a> and <a class="digital" href="https://www.facebook.com/TheGoatFarmArtsCenter/" target="_blank">The Goat Farm</a>. Our winning week featured five full nights of distinct programming, with each night using our collaborative livestream platform differently. Over the last year our team has been working to produce the second iteration of this concept. This copy should talk about the types of partnership and some evocative text that  highlights the fact that we are still looking for active partnerships in the form financial backers, technology support, development, and in kind donations of all kinds.</p>
+
+    <h3 class="container__page__subheading">/ Sponsors</h3>
+    <div class="sponsors">
+      <a href="https://mailchimp.com" class="no-slash" target="_blank"><img height="auto" width="230" src="img/mailchimp.png"></a>
+      <a href="http://www.gsu.edu/" class="no-slash" target="_blank"><img height="auto" width="160" src="img/gsu.png"></a>
+      <a href="http://www.chemistryagency.com/" class="no-slash" target="_blank"><img height="auto" width="220" src="img/chemistry-bad.png"></a>
+      <a href="https://www.wafflehouse.com/" class="no-slash" target="_blank"><img height="auto" width="200" src="img/waho.png"></a>
+      <a href="http://www.hambidge.org/" class="no-slash" target="_blank"><img height="auto" width="230" src="img/hambidge.png"></a>
+      <a href="https://www.facebook.com/TheGoatFarmArtsCenter/" class="no-slash" target="_blank"><img height="auto" width="120" src="img/goatfarm.png"></a>
+    </div>
+
+    <h3 class="container__page__subheading">/ Local Partners</h3>
+    <p>
+      <a href="http://info.maestro.io/" class="digital" target="_blank">Maestro.io</a> one line blurb about how cool Maestro is<br />
+      <a href="http://masscollective.org/" class="digital" target="_blank">MASS Collective</a> one line blurb about how cool MASS is<br />
+      <a href="http://www.mammalgallery.com/" class="digital" target="_blank">MAMMAL Gallery</a> one line blurb about how Mammal is<br />
+    </p>
+
+    <div class="partners__cta">
+      <div class="partners__cta__row">
+        <span class="md">BECOME</span>
+        <span class="md">a</span>
+        <span class="md">PARTNER</span>
+      </div>
+      <a href="mailto:info@9to5.tv" class="partners__cta__row no-slash">
+        <span class="lg">/</span>
+        <span class="lg">T</span>
+        <span class="lg">O</span>
+        <span class="lg">D</span>
+        <span class="lg">A</span>
+        <span class="lg">Y</span>
+        <span class="lg">/</span>
+      </a>
+
+    </div>
   </div>
 </div>
