--- a/src/partials/introduction.html
+++ b/src/partials/introduction.html
@@ -13,9 +13,9 @@
     <div class="gallery-boxes__pair">
       <div class="gallery-boxes__box">
         <h3>GALLERY</h3>
-        <p>/ Features and curates artworks
-        / Hosts discussions and lectures
-        / Invites the public to view the work</p>
+        <p>/ Features and curates artworks</p>
+        <p>/ Hosts discussions and lectures</p>
+        <p>/ Invites the public to view the work</p>
       </div>
 
       <div class="gallery-boxes__box">
@@ -30,15 +30,15 @@
 
       <div class="gallery-boxes__box">
         <h3>CLASS-<br />ROOM</h3>
-        <p>/ Features and curates artworks
-        / Hosts discussions and lectures
-        / Invites the public to view the work</p>
+        <p>/ Features and curates artworks</p>
+        <p>/ Hosts discussions and lectures</p>
+        <p>/ Invites the public to view the work</p>
       </div>
       <div class="gallery-boxes__box">
         <h3>TV<br />NETWORK</h3>
-        <p>/ Features and curates artworks
-        / Hosts discussions and lectures
-        / Invites the public to view the work</p>
+        <p>/ Features and curates artworks</p>
+        <p>/ Hosts discussions and lectures</p>
+        <p>/ Invites the public to view the work</p>
       </div>
     </div>
   </div>
