--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -8,7 +8,7 @@
     <div class="sponsors">
       <a href="https://mailchimp.com" class="no-slash" target="_blank"><img height="auto" width="230" src="img/mailchimp.png"></a>
       <a href="http://www.gsu.edu/" class="no-slash" target="_blank"><img height="auto" width="160" src="img/gsu.png"></a>
-      <a href="http://www.chemistryagency.com/" class="no-slash" target="_blank"><img height="auto" width="220" src="img/chemistry-bad.png"></a>
+      <a href="http://www.chemistryagency.com/" class="no-slash" target="_blank"><img height="auto" width="220" src="img/chemistry.png"></a>
       <a href="https://www.wafflehouse.com/" class="no-slash" target="_blank"><img height="auto" width="200" src="img/waho.png"></a>
       <a href="http://www.hambidge.org/" class="no-slash" target="_blank"><img height="auto" width="230" src="img/hambidge.png"></a>
       <a href="https://www.facebook.com/TheGoatFarmArtsCenter/" class="no-slash" target="_blank"><img height="auto" width="120" src="img/goatfarm.png"></a>
