--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -4,7 +4,7 @@
   <div class="container__page__contents">
     <h3 class="container__page__subheading">/ Pablo Gnecco</h3>
     <p>
-      <a class="digital" target="_blank" href="http://studiostudio.nyc/">studiostudio.nyc</a> Experiential Artist and Motion Designer living and working in NYC, member of The New Museum’s Art and Tech Incubator, NEWINC. Founder of Studio Studio, an immersive installation company exploring the intersection of participation, performance, and new technology to create experiences and interactive works of art.
+      <a class="digital" target="_blank" href="http://studiostudio.nyc/">studiostudio.nyc</a> Experiential Artist and Motion Designer living and working in NYC, member of The New Museum&rsquo;s Art and Tech Incubator, NEWINC. Founder of Studio Studio, an immersive installation company exploring the intersection of participation, performance, and new technology to create experiences and interactive works of art.
     </p>
 
     <h3 class="container__page__subheading">/ Travis Broyles</h3>
