--- a/src/styles/introduction.scss
+++ b/src/styles/introduction.scss
@@ -5,4 +5,10 @@
     line-height: 1.75em;
     text-align: justify;
   }
+
+  .gallery-boxes {
+    p {
+      display: inline-block;
+    }
+  }
 }
