--- a/src/partials/introduction.html
+++ b/src/partials/introduction.html
@@ -16,9 +16,9 @@
 
       <div class="gallery-boxes__box">
         <h3>RESIDENCY</h3>
-        <p>/ Features and curates artworks</p>
-        <p>/ Hosts discussions and lectures</p>
-        <p>/ Invites the public to view the work</p>
+        <p>/ Facilitates immersive studies</p>
+        <p>/ Accommodates international talent</p>
+        <p>/ Compensates featured artists</p>
       </div>
     </div>
 
@@ -26,15 +26,15 @@
 
       <div class="gallery-boxes__box">
         <h3>CLASS-<br />ROOM</h3>
-        <p>/ Features and curates artworks</p>
-        <p>/ Hosts discussions and lectures</p>
-        <p>/ Invites the public to view the work</p>
+        <p>/ Allows for one-on-one interaction</p>
+        <p>/ Shares expertise with viewers</p>
+        <p>/ Explores new methods of teaching</p>
       </div>
       <div class="gallery-boxes__box">
         <h3>TV<br />NETWORK</h3>
-        <p>/ Features and curates artworks</p>
-        <p>/ Hosts discussions and lectures</p>
-        <p>/ Invites the public to view the work</p>
+        <p>/ Broadcasts 200+ hours</p>
+        <p>/ Gives artists their own &lsquo;shows&rsquo;</p>
+        <p>/ Entertains while educating</p>
       </div>
     </div>
   </div>
