--- a/src/partials/opencall.html
+++ b/src/partials/opencall.html
@@ -32,14 +32,14 @@
         <h3>INSIDE/<br />PROJECT</h3>
         <p>A multi-day new media project hosted in Atlanta. Artist(s) will work live on stream. Must collaborate with the public.</p>
         <span class="gallery-boxes__box__award">Award / $750</span>
-        <a class="gallery-boxes__box__link digital apply" data-type="inside-project" href="#">apply</a>
+        <a class="gallery-boxes__box__link digital apply" data-type="INSIDE/Project" href="#">apply</a>
       </div>
 
       <div class="gallery-boxes__box">
         <h3>OUTSIDE/<br />PROJECT</h3>
         <p>A multi-day new media project hosted abroad. Artist(s) will broadcast from location and/or present project online through our platform.</p>
         <span class="gallery-boxes__box__award">Award / $300</span>
-        <a class="gallery-boxes__box__link digital apply" data-type="outside-project" href="#">apply</a>
+        <a class="gallery-boxes__box__link digital apply" data-type="OUTSIDE/Project" href="#">apply</a>
       </div>
     </div>
 
@@ -49,13 +49,13 @@
         <h3>INSIDE/<br />GALLERY</h3>
         <p>A previously completed or in-progress artwork with a digital component to show at our real world gallery.</p>
         <span class="gallery-boxes__box__award">Award / $300</span>
-        <a class="gallery-boxes__box__link digital apply" data-type="inside-gallery" href="#">apply</a>
+        <a class="gallery-boxes__box__link digital apply" data-type="INSIDE/Gallery" href="#">apply</a>
       </div>
       <div class="gallery-boxes__box">
         <h3>OUTSIDE/<br />GALLERY</h3>
         <p>A previously completed or in-progress artwork, primarily digital, to show in our virtual gallery.</p>
         <span class="gallery-boxes__box__award">Award / $150</span>
-        <a class="gallery-boxes__box__link digital apply" data-type="outside-gallery" href="#">apply</a>
+        <a class="gallery-boxes__box__link digital apply" data-type="OUTSIDE/Gallery" href="#">apply</a>
       </div>
     </div>
   </div>
