--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -2,6 +2,8 @@
   <h2><a href="#team" class="scroll no-slash">Team</a></h2>
 
   <div class="container__page__contents">
+    <p>The <span class="n9to5">9to5</span> team is incredibly excited to share our second iteration with you. The concept has evolved significantly from our first weeklong exhibition in early 2016, which, like most early projects, relied heavily on those friends willing to pick up a broom or a camera or a paintbrush. Today, with the help of FIELD EXPERIMENT and our sponsors, we have built a fully realized platform for artists and technologists who, just like us, want to make projects that invent new ways of making, collaborating, and teaching. We&rsquo;re excited to lend the hands we can... just as our friends did for us. See you in September.</p>
+
     <h3 class="container__page__subheading">/ Pablo Gnecco</h3>
     <p>
       <a class="digital" target="_blank" href="http://studiostudio.nyc/">studiostudio.nyc</a> Experiential Artist and Motion Designer living and working in NYC, member of The New Museum&rsquo;s Art and Tech Incubator, NEWINC. Founder of Studio Studio, an immersive installation company exploring the intersection of participation, performance, and new technology to create experiences and interactive works of art.
@@ -9,7 +11,7 @@
 
     <h3 class="container__page__subheading">/ Travis Broyles</h3>
     <p>
-      <a class="digital" target="_blank" href="https://verysandwich.com/">verysandwich.com</a> A copywriter and digital strategist for seven years, Broyles believes that the best communication, whether it’s for collaborators, communities, or consumers, starts with common sense ethics and a southern fried desire to truly help one another. Most recently he co-founded a digital strategy and content company, Very Sandwich Inc.
+      <a class="digital" target="_blank" href="https://verysandwich.com/">verysandwich.com</a> A copywriter and digital strategist for eight years, Broyles believes that the best communication, whether it&rsquo;s for collaborators, communities, or clients, starts with common sense ethics and a southern fried desire to truly help one another. Once described as a &ldquo;headline machine&rdquo;, he&rsquo;s praying for the day they start giving Oscars for livestreams. Or at least really good sandwiches.
     </p>
 
     <h3 class="container__page__subheading">/ Derek Bruno</h3>
@@ -19,7 +21,7 @@
 
     <h3 class="container__page__subheading">/ Eric Rabinowitz</h3>
     <p>
-      <a class="digital" target="_blank" href="http://ericrabinowitz.com/">ericrabinowitz.com</a>
+      <a class="digital" target="_blank" href="http://ericrabinowitz.com/">ericrabinowitz.com</a> Web developer and creative coder based in Atlanta, who believes we must all actively nudge the Internet to be more open and share its feelings. Currently working on a digital platform to help artists manage their networks and get referred to collaboration or hiring opportunities.
     </p>
   </div>
 </div>
