--- a/src/partials/tools.html
+++ b/src/partials/tools.html
@@ -3,7 +3,12 @@
 
   <div class="container__page__contents">
     <p>
-      Tools blurb : This should be some pretty legit text that explains the general premise of what we are looking to accomplish with the tools we are providing, maybe there is a <a href="#">link</a> to a repository of some kind to see the back end of the tools that are developed i think this section will be critical going forwar.... lets do it right.
+      Coming soon from 9to5. A suite of tools or <em>inputs</em> that will make viewer interaction with the livestream a cinch to program. Chat and social are already implemented thanks to streaming partner Maestro, and now the <span class="n9to5">9to5</span> team is focusing on more experimental methods of interaction.</p>
+    <p>Here&rsquo;s how they work:
+      <br />1. The artist determines what output they&rsquo;d like to see, like the dimming of a lightbulb.
+      <br />2. Artist selects their input from the suite of tools, such as &ldquo;click and drag&rdquo;.
+      <br />3. Because <span class="n9to5">9to5</span> has already developed the input, the artist only needs to plug our &ldquo;click and drag&rdquo; tool into their &ldquo;dimmer&rdquo; output.
+      <br />4. If any problems arise, our team is always available to help make your project work.
     </p>
   </div>
 </div>
