--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -2,24 +2,29 @@
   <h2><a href="#partners" class="scroll no-slash">Partners</a></h2>
 
   <div class="container__page__contents">
-    <p>The <span class="n9to5">9to5</span> Beta was one of five forward-thinking finalists for <a class="digital" href="http://www.fieldexperimentatl.com/" target="_blank">Field Experiment</a>, an annual grant competition sponsored by <a class="digital" href="http://www.hambidge.org/" target="_blank">The Hambidge Center for the Creative Arts</a> and <a class="digital" href="https://www.facebook.com/TheGoatFarmArtsCenter/" target="_blank">The Goat Farm</a>. Our winning week featured five full nights of distinct programming, with each night using our collaborative livestream platform differently. Over the last year our team has been working to produce the second iteration of this concept. This copy should talk about the types of partnership and some evocative text that  highlights the fact that we are still looking for active partnerships in the form financial backers, technology support, development, and in kind donations of all kinds.</p>
-
     <h3 class="container__page__subheading">/ Sponsors</h3>
     <div class="sponsors">
       <a href="https://mailchimp.com" class="no-slash" target="_blank"><img height="auto" width="230" src="img/mailchimp.png"></a>
       <a href="http://www.gsu.edu/" class="no-slash" target="_blank"><img height="auto" width="160" src="img/gsu.png"></a>
       <a href="http://www.chemistryagency.com/" class="no-slash" target="_blank"><img height="auto" width="220" src="img/chemistry.png"></a>
       <a href="https://www.wafflehouse.com/" class="no-slash" target="_blank"><img height="auto" width="200" src="img/waho.png"></a>
-      <a href="http://www.hambidge.org/" class="no-slash" target="_blank"><img height="auto" width="230" src="img/hambidge.png"></a>
-      <a href="https://www.facebook.com/TheGoatFarmArtsCenter/" class="no-slash" target="_blank"><img height="auto" width="120" src="img/goatfarm.png"></a>
     </div>
 
-    <h3 class="container__page__subheading">/ Local Partners</h3>
+    <h3 class="container__page__subheading">/ Presented by</h3>
+    <div class="sponsors">
+      <a href="http://www.fieldexperimentatl.com/" class="no-slash big-sponsor" target="_blank">
+        <img height="auto" width="450" src="img/fexp.png">
+      </a>
+    </div>
+
+    <h3 class="container__page__subheading">/ Partners</h3>
     <p>
-      <a href="http://info.maestro.io/" class="digital" target="_blank">Maestro.io</a> one line blurb about how cool Maestro is<br />
-      <a href="http://masscollective.org/" class="digital" target="_blank">MASS Collective</a> one line blurb about how cool MASS is<br />
-      <a href="http://www.mammalgallery.com/" class="digital" target="_blank">MAMMAL Gallery</a> one line blurb about how Mammal is<br />
+      <a href="http://info.maestro.io/" class="digital" target="_blank">Maestro.io</a> Use Maestro to create engaging video experiences.<br />
+      <a href="http://masscollective.org/" class="digital" target="_blank">MASS Collective</a> Supporting Musical, Artistic, Scientific, and Social pursuits<br />
+      <a href="http://www.mammalgallery.com/" class="digital" target="_blank">MAMMAL Gallery</a> Atlanta&rsquo;s favorite ever-evolving carte blanche<br />
     </p>
+
+    <p class="blurb">9to5 relies on supporters like you to keep the experiment going. We value all of our supporters, big or small, and would love to talk with you about how you can be a part of our platform. All donations are tax deductible, fund independent artists and technologists, and help facilitate groundbreaking innovation across all interests and industries. Reach out. We&rsquo;re ready to talk to you.</p>
 
     <div class="partners__cta">
       <div class="partners__cta__row">
@@ -36,7 +41,9 @@
         <span class="lg">Y</span>
         <span class="lg">/</span>
       </a>
-
     </div>
+    <p class="partners__benefits">Ad Placement Across Platforms</p>
+    <p class="partners__benefits">501(c)(3) Deductible Donation</p>
+    <p class="partners__benefits">Position with Progress</p>
   </div>
 </div>
