--- a/src/partials/tools.html
+++ b/src/partials/tools.html
@@ -3,12 +3,11 @@
 
   <div class="container__page__contents">
     <p>
-      Coming soon from 9to5. A suite of tools or <em>inputs</em> that will make viewer interaction with the livestream a cinch to program. Chat and social are already implemented thanks to streaming partner Maestro, and now the <span class="n9to5">9to5</span> team is focusing on more experimental methods of interaction.</p>
+      Coming soon from <span class="n9to5">9to5</span>. A suite of tools that will make viewer interaction with the livestream a cinch to program. One of the main focuses of 9to5 projects is a user provided input translating to a project or artist output. With that in mind, our team is attempting to simplify the process for any developer or artist looking to program an output by pre-developing a set of inputs. Chat and social are already implemented thanks to streaming partner Maestro, and now the <span class="n9to5">9to5</span> team is focusing on more experimental methods of interaction.</p>
     <p>Here&rsquo;s how they work:
       <br />1. The artist determines what output they&rsquo;d like to see, like the dimming of a lightbulb.
       <br />2. Artist selects their input from the suite of tools, such as &ldquo;click and drag&rdquo;.
       <br />3. Because <span class="n9to5">9to5</span> has already developed the input, the artist only needs to plug our &ldquo;click and drag&rdquo; tool into their &ldquo;dimmer&rdquo; output.
-      <br />4. If any problems arise, our team is always available to help make your project work.
     </p>
   </div>
 </div>
