--- a/src/partials/opencall.html
+++ b/src/partials/opencall.html
@@ -2,14 +2,6 @@
   <h2><a href="#open-call" class="scroll no-slash">Open call</a></h2>
 
   <div class="container__page__contents">
-    <p>If you have a potential project that utilizes livestreaming and / or digital inputs to blur the line between &lsquo;viewer&rsquo; and &lsquo;collaborator&rsquo;, we want to hear from you. From data visualization to interpretative dance, podcasts to prose, AI to the humanities, all artists and technologists with an interest in experimentation are welcome.</p>
-
-    <p class="notes">Talent will have access to a ton of new technology courtesy of Georgia State University.</p>
-
-    <p class="notes">For talent that needs it, travel to Atlanta will be covered by <span class="n9to5">9to5</span>, along with lodging and food.</p>
-
-    <p class="notes">All submissions will be considered, but there are limited slots available in each category.</p>
-
     <div class="opencall__cta">
       <div class="opencall__cta__row">
         <span class="md">APPLY</span>
@@ -22,7 +14,26 @@
         <span class="lg">L</span>
         <span class="lg">L</span>
       </div>
+    </div>
 
+    <p>If you have a potential project that utilizes livestreaming and / or digital inputs to blur the line between &lsquo;viewer&rsquo; and &lsquo;collaborator&rsquo;, we want to hear from you. From data visualization to interpretative dance, podcasts to prose, AI to the humanities, all artists and technologists with an interest in experimentation are welcome.</p>
+
+    <p class="notes">Talent will have access to a ton of new technology courtesy of Georgia State University.</p>
+
+    <p class="notes">For talent that needs it, travel to Atlanta will be covered by <span class="n9to5">9to5</span>, along with lodging and food.</p>
+
+    <p class="notes">All submissions will be considered, but there are limited slots available in each category.</p>
+
+    <div class="opencall__cta">
+      <div class="opencall__cta__row">
+        <span class="lg">APPLY</span>
+        <span class="lg">BEFORE</span>
+      </div>
+      <div class="opencall__cta__row">
+        <span class="lg">17</span>
+        <span class="lg">JULY</span>
+        <span class="lg">17</span>
+      </div>
     </div>
   </div>
 
