--- a/src/styles/partners.scss
+++ b/src/styles/partners.scss
@@ -9,7 +9,7 @@
     a {
       display: inline-block;
       max-width: 45%;
-      margin: 2rem 0;
+      margin: 0 0 2rem;
 
       &.big-sponsor {
         max-width: 100%;
